--- a/src/components/TableDate/TableDate.style.css
+++ b/src/components/TableDate/TableDate.style.css
@@ -70,7 +70,7 @@ input:focus {
     outline: 1px solid #ccc;
     border: 1px solid #ccc;
 }
-.table-container {
+.tableContainer {
     width: 86%;
     margin: 0 auto;
     text-align: center;
